:sparkles: add example to request api with bearer

--- a/front/beagile/src/app/app.component.html
+++ b/front/beagile/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="afAuth.user | async as user; else showLogin">
   <h1>Hello {{ user.displayName }}!</h1>
   <button (click)="logout()">Logout</button>
+  <button (click)="request(user)">request to api</button>
 </div>
 <ng-template #showLogin>
   <p>Please login.</p>
