--- a/front/be-agile/src/app/app.component.html
+++ b/front/be-agile/src/app/app.component.html
@@ -1,1 +1,5 @@
+<img src="/assets/images/btn_google_signin_light_normal_web.png"
+     srcset="/assets/images/btn_google_signin_light_normal_web.png 1x,
+             /assets/images/btn_google_signin_light_normal_web@2x.png 2x">
+
 <router-outlet></router-outlet>
