--- a/front/be-agile/src/app/commons/sign-in/sign-in-with-google-button/sign-in-with-google-button.component.html
+++ b/front/be-agile/src/app/commons/sign-in/sign-in-with-google-button/sign-in-with-google-button.component.html
@@ -1,4 +1,4 @@
-<a class="pointer" (click)="signIn()">
+<a class="button" (click)="signIn()">
   <img src="/assets/images/btn_google_signin_light_normal_web.png"
       srcset="/assets/images/btn_google_signin_light_normal_web.png 1x,
               /assets/images/btn_google_signin_light_normal_web@2x.png 2x">
